tests/macros/plugin/page_size.stderr
error: option `page_size` does not exist for kind `plugin`
 --> $DIR/page_size.rs:2:36
  |
2 |     requestty::questions![Plugin { page_size: todo!() }];
  |                                    ^^^^^^^^^
