tests/macros/plugin/page_size.rs
fn main() {
    requestty::questions![Plugin { page_size: todo!() }];
}
